# pointmesh

./: CMakeLists.txt  bunny.stl  main.cpp
cli/: main.cpp
